tests/ui/macro_invalid_metric_type.rs
chalk_metrics::define_metrics! {
    group(tags = []) {
        pub timer BadMetric => "bad_metric", "Bad metric";
    }
}

fn main() {}
